docs/apache-airflow-providers-redis/3.2.0/_sources/_api/airflow/providers/redis/hooks/redis/index.rst.txt
:py:mod:`airflow.providers.redis.hooks.redis`
=============================================

.. py:module:: airflow.providers.redis.hooks.redis

.. autoapi-nested-parse::

   RedisHook module



Module Contents
---------------

Classes
~~~~~~~

.. autoapisummary::

   airflow.providers.redis.hooks.redis.RedisHook




.. py:class:: RedisHook(redis_conn_id = default_conn_name)

   Bases: :py:obj:`airflow.hooks.base.BaseHook`

   Wrapper for connection to interact with Redis in-memory data structure store

   You can set your db in the extra field of your connection as ``{"db": 3}``.
   Also you can set ssl parameters as:
   ``{"ssl": true, "ssl_cert_reqs": "require", "ssl_cert_file": "/path/to/cert.pem", etc}``.

   .. py:attribute:: conn_name_attr
      :value: 'redis_conn_id'

      

   .. py:attribute:: default_conn_name
      :value: 'redis_default'

      

   .. py:attribute:: conn_type
      :value: 'redis'

      

   .. py:attribute:: hook_name
      :value: 'Redis'

      

   .. py:method:: get_conn()

      Returns a Redis connection.



